test/correct/PMC2.hs
module PMC2 where

main :: Int
main = const2 3 4

const2 :: a -> b -> a
const2 x y = x
