test/typeerrors/Examples/QualGenerator.hs
module QualGenerator where

f :: Int -> [Int]
f x = [ a | a <- x ]
